infra/kubernetes/frontend/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: matriculas-frontend
  namespace: matriculas

spec:
  selector:
    app: matriculas-frontend

  ports:
    - name: http
      port: 80
      targetPort: 80

  type: ClusterIP
